# caigode

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.harness/state/: architecture.md  codex-progress.md  decisions-needed.md  feature_list.json  spec.md
src/caigode/: __init__.py  cli.py  config.py
src/caigode/application/: agent_service.py  tool_runtime.py
src/caigode/domain/: task.py
src/caigode/infra/: openai_client.py  review_artifacts.py  shell.py  state_store.py  workspace.py
src/caigode/interface/: repl.py  review_handler.py  run_handler.py  status_handler.py
tests/: __init__.py  test_agent_service.py  test_cli_help.py  test_config.py  test_e2e_flow.py  test_openai_client.py  test_repl_chat.py  test_review_command.py  test_run_command.py  test_state_store.py  test_status_command.py  test_workspace_tools.py
tests/fixtures/e2e_workspace/docs/: context.txt
