[project]
name = "caigode"
version = "0.1.0"
description = "Local coding agent CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
caigode = "caigode.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/caigode"]
